<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Frozen Bubble</string>
  <string name="exit">Exit</string>
  <string name="install_editor">Redirecting you to the Market to download the Frozen Bubble Level Editor…</string>
  <string name="market_missing">Cannot find Android Market! Please install Frozen Bubble Level Editor manually.</string>
  
  <string name="menu_player_information">Player information</string>
  <string name="player_name">Player Name</string>
  <string name="player_name_summary">Please enter your name</string> 
  
  <string name="menu_bluetooth_device">Bluetooth Device</string>
  <string name="menu_new_game">Start New Game</string>
  
  <string name="colorblind_mode">Colorblind Mode</string>  
  
  <string name="menu_colorblind_on">Colorblind Mode On</string>
  <string name="menu_colorblind_off">Colorblind Mode Off</string>
  <string name="fullscreen_mode">Fullscreen Mode</string>
  <string name="menu_fullscreen_on">Fullscreen On</string>
  <string name="menu_fullscreen_off">Fullscreen Off</string>
  <string name="hurry_mode">Hurry Mode</string>
  <string name="menu_sound_options">Sound Options</string>
  <string name="menu_about">About Frozen Bubble</string>
  <string name="menu_target_mode">Targeting Mode</string>
  <string name="menu_target_mode_summary">Choose targeting mode</string>
  <string name="bubble_sensitivity">Bubble Sensitivity</string>
  <string name="bubble_sensitivity_summary">Select bubble sensitivity</string>
  <string name="pixelsright"> pixels</string>
  <string name="menu_dont_rush_me">Don\'t Rush Me</string>
  <string name="menu_rush_me">Rush Me</string>

  <string name="arcade_2_player_options">Arcade/2 Player Game Options</string>
  <string name="difficulty_summary">Choose difficulty</string>
  <string name="difficulty">Difficulty</string>
  <string name="colorsright"> colors</string>
  
  <string name="2_player_options">2 Player Game Options</string>
  
  <string name="compressor_option">Compressor Option</string>
  
  <string name="menu_editor">Level Editor</string>
  <string name="menu_settings">Settings</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="play_level_music">Play Level Music</string>
  <string name="play_sound_effects">Play Sound Effects</string>
  <string name="save_and_exit">Save and Exit</string>
  <string name="title_activity_frozen_bubble">Frozen Bubble</string>
  <string name="title_activity_home_screen">Frozen Bubble</string>
  
  <string name="input_not_found">Input Not Found</string>
  <string name="more_gamepads_needed"> gamepads found, 1 or more needed.</string>
  <string name="options">Options</string>
  <string name="twoplayer">2 Player</string>
  <string name="puzzle">Puzzle</string>
  <string name="arcade">Arcade</string>
  <string name="wifi">WiFi</string>
  <string name="bluetooth">Bluetooth</string>
  <string name="local">Local</string>
  <string name="player1">Player 1</string>
  <string name="player2">Player 2</string>
  <string name="saved_game">Saved Game</string>
  <string name="player_vs_cpu">Player vs. CPU</string>
  <string name="extras">Extras</string>
  
  <string name="scrolling_credits">"Original Development\n"
    "------------------------\n"
    "\nGuillaume Cottenceau - Design and Programming\n"
    "\nAlexis Younes - Graphics\n"
    "\nAmaury Amblard-Ladurantie - Coding and Graphics Support\n"
    "\nMatthias Le Bidan - Sounds\n"
    "\nhttp://www.frozen-bubble.org/\n\n\n"
    "\nJava Development\n"
    "------------------------\n"
    "\nGlenn Sanson\n\n\n"
    "\nAndroid Port\n"
    "------------------------\n"
    "\nPawel Aleksander Fedorynski - Project Owner\n"
    "\nEric Fortin - Committer\n"
    "\nhttps://code.google.com/p/frozenbubbleandroid/\n\n\n"
    "\nAdditional Code\n"
    "------------------------\n"
    "\nAntoine Vianey - Accelerometer Manager\n"
    "\nhttps://code.google.com/p/androgames-sample/\n\n"
    "\nPatrick Casey - AndModPlug Library\n"
    "\nhttp://www.peculiar-games.com/\n\n"
    "\nMichel Racic - High Score Manager\n"
    "\nhttp://www.2030.tk/\n\n\n"
    "\nTranslations\n"
    "------------------------\n"
    "\nShanghai Ndoo Network Technology Ltd. - Chinese\n\n"
    "\nCélim Hanifi - French\n\n"
    "\nUwe Walschus - German\n\n"
    "\nAndré Marcelo Alvarenga - Brazilian Portuguese\n\n"
    "\nJuan Aguado - Spanish\n\n"
    "\nPjetur G Hjaltason - Icelandic\n\n\n"
    "\nMusic Credits\n"
    "------------------------\n"
    "\nAfter the Rain\nby Unknown Artist\n\n"
    "\nAmbient Light\nby Vogue of Triton\n\n"
    "\nAmbient Power\nby Vogue of Triton\n\n"
    "\nAndroid Rupture\nby Baroque of Freelance\n\n"
    "\nArtificial\nby Moby\n\n"
    "\nBlue Stars\nby Blackstar\\Timetraveller of Cryptoburners\n\n"
    "\nChunga-babe!\nby Yannis Brown\n\n"
    "\nCrystalhammer\nby Karsten Obarski\n\n"
    "\nDreamscope I\nby Counterpoint of Westower\n\n"
    "\nFreefall\nby Baroque of Freelance\n\n"
    "\nGaea\'s Awakening\nby Dreamsection\n\n"
    "\nHomesick\nby Electric Keet\n\n"
    "\nIf Crystals…\nby Tran of Renaissance\n\n"
    "\nFrozen Bubble Intro\nby Matthias Le Bidan\n\n"
    "\nPopcorn\nby Unknown Artist\n\n"
    "\nStardust Memories\nby Jester of Sanity\n\n"
    "\nSunshine of the Morning Sun\nby Area51 (Dan Nyman)\n\n"
    "\nTechnostyle III\nby Xenox of Triad\n\n"
    "\nWorld of Peace\nby Zanoma (Marwan Green Critter)\n\n"
    "\nAll songs downloaded from:\n"
    "http://modarchive.org/\n\n\n"
    "\n\n\nThank You For Playing!"</string>
  <string-array name="shoot_mode_array">
    <item>Aim Then Shoot</item>
    <item>Point To Shoot</item>
    <item>Rotate Then Shoot</item>
  </string-array>
  <string-array name="sound_options_array">
    <item>@string/play_sound_effects</item>
    <item>@string/play_level_music</item>
  </string-array>
  <string-array name="targeting_values_array">
    <item>0</item>
    <item>1</item>
    <item>2</item>
   </string-array>
</resources>
