<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:efortin="https://code.google.com/p/frozenbubbleandroid"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" >

  <PreferenceCategory
    android:summary="Frozen Bubble Game Options"
    android:title="@string/menu_player_information" >
  <EditTextPreference
    android:key="player_name"
    android:summary="@string/player_name_summary"
    android:title="@string/player_name" />
  </PreferenceCategory>

  <PreferenceCategory
    android:summary="Frozen Bubble Game Options"
    android:title="@string/menu_sound_options" >
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="play_music_option"
    android:summary="On/Off"
    android:title="@string/play_level_music" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="sound_effects_option"
    android:summary="On/Off"
    android:title="@string/play_sound_effects" />
  </PreferenceCategory>

  <PreferenceCategory
    android:summary="Frozen Bubble Game Options"
    android:title="@string/menu_settings" >
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="colorblind_option"
    android:summary="On/Off"
    android:title="@string/colorblind_mode" />

  <CheckBoxPreference
    android:defaultValue="true"
    android:key="fullscreen_option"
    android:summary="On/Off"
    android:title="@string/fullscreen_mode" />

  <CheckBoxPreference
    android:defaultValue="true"
    android:key="rush_me_option"
    android:summary="On/Off"
    android:title="@string/hurry_mode" />

  <ListPreference
    android:defaultValue="1"
    android:entries="@array/shoot_mode_array"
    android:entryValues="@array/targeting_values_array"
    android:key="targeting_option"
    android:summary="@string/menu_target_mode_summary"
    android:title="@string/menu_target_mode" />

  <com.efortin.frozenbubble.SeekBarPreference
    android:defaultValue="20"
    android:key="collision_option"
    android:max="29"
    android:summary="@string/bubble_sensitivity_summary"
    android:title="@string/bubble_sensitivity"
    efortin:min="20"
    efortin:unitsLeft=""
    efortin:unitsRight="@string/pixelsright" />
  </PreferenceCategory>

  <PreferenceCategory
    android:summary="Frozen Bubble Game Options"
    android:title="@string/arcade_2_player_options" >
  <com.efortin.frozenbubble.SeekBarPreference
    android:defaultValue="5"
    android:key="difficulty_option"
    android:max="8"
    android:summary="@string/difficulty_summary"
    android:title="@string/difficulty"
    efortin:min="4"
    efortin:unitsLeft=""
    efortin:unitsRight="@string/colorsright" />
  </PreferenceCategory>

  <PreferenceCategory
    android:summary="Frozen Bubble Game Options"
    android:title="@string/2_player_options" >
  <CheckBoxPreference
    android:defaultValue="false"
    android:key="compressor_option"
    android:summary="On/Off"
    android:title="@string/compressor_option" />
  </PreferenceCategory>

</PreferenceScreen>
